fixed firefox issues with better css reset & scrollbar hiding

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,6 +52,7 @@ a {
 
 * {
   box-sizing: border-box;
+  scrollbar-width: none;
 }
 
 ::-webkit-scrollbar {
